# topchem

./: .gitignore  README.md  pyproject.toml  setup.cfg
playground/: 4DK9_p.mae  hierarchy.top  lark-test.ipynb  mmcif.ipynb  ply-test.ipynb  posre_DNA_chain_B.itp  posre_Protein_chain_A.itp  topol.top  topol_DNA_chain_B.itp  topol_Ion_chain_A2.itp  topol_Protein_chain_A.itp  tree.dump  urea.top  urea1.top
playground/data/mmcif/: 4JPP.cif
topchem/: exceptions.py
topchem/gromacs/top/: gromacs_topology.lark  parser.py
